add slides link

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 					<h4>CSS animations!</h4>
 				</section>
 				<section>
-					<h1>Last slide, any questions?</h1>
+					<h1>Any questions?</h1>
+					<p>slides available here: <a href="http://madmed88.github.io/CSS3-transitions-introduction/">http://madmed88.github.io/CSS3-transitions-introduction/</a></p>
 				</section>
 			</div>
 
